{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 669,
  "lineage": "4488d619-0607-0f20-fa41-f9eedf99caa5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-26T12:01:24.469-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/zinc-strategy-393412/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/global/networks/mon-reseau",
            "priority": 1000,
            "project": "zinc-strategy-393412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-https-3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-26T12:01:24.642-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/zinc-strategy-393412/global/firewalls/allow-3306",
            "log_config": [],
            "name": "allow-3306",
            "network": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/global/networks/mon-reseau",
            "priority": 1000,
            "project": "zinc-strategy-393412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/global/firewalls/allow-3306",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "db-server",
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-https-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-26T12:01:24.498-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/zinc-strategy-393412/global/firewalls/allow-http-https-ssh",
            "log_config": [],
            "name": "allow-http-https-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/global/networks/mon-reseau",
            "priority": 1000,
            "project": "zinc-strategy-393412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/global/firewalls/allow-http-https-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "db-server",
              "http-server"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20230912",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/zones/europe-west1-b/disks/db-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/zinc-strategy-393412/zones/europe-west1-b/instances/db-instance",
            "instance_id": "8576413668734833780",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "mansourcgi:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDCqWKknu2PxquCuJvx2QPT7BVHq18Tu8C34FbgLWXxhvLxJb3wpoGXLUzb94aWWv2Ousdjbb2uLtliMHaIOX4gGrT1V+KMkt3abP/ydSWbzhIK+p5AQxXrDI6SIoXCH877C0X7quPQCb7BFtG5kOaEQuXQY/hGWEThoAIuxIIdz2mYarUCLES7/K9IzNKSV/GXZmbX7xCOHV0Fc4CDNc0eUYncarSisI4VX6BxPwZ2stG+Kg/GDcO1oWNpFczC/1EcxnKgMDwvEQIJujEa7p7K9cUgfWhdtm9WGtLqwRFM12lJnMOh6/Ko8aHnH/McZjjBAqjbUOK/LDVcB5Z5rzw+tmXIGpffdazOdmkPxAPZn59cc9oFh6HuUKLghB+S5bbNvvr97/mm/po+V+0XZdLcJILBNK0RHHB/zV1kvv [...]
            },
            "metadata_fingerprint": "vXoBPYNmrvk=",
            "name": "db-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.199.23.179",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/global/networks/mon-reseau",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/regions/europe-west1/subnetworks/mon-sous-reseau",
                "subnetwork_project": "zinc-strategy-393412"
              }
            ],
            "project": "zinc-strategy-393412",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/zones/europe-west1-b/instances/db-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db-server"
            ],
            "tags_fingerprint": "6nVWpqigcVg=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_subnetwork.my_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20230912",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/zones/europe-west1-b/disks/wordpress-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/zinc-strategy-393412/zones/europe-west1-b/instances/wordpress-instance",
            "instance_id": "1679799778910573684",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "mansourcgi:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDCqWKknu2PxquCuJvx2QPT7BVHq18Tu8C34FbgLWXxhvLxJb3wpoGXLUzb94aWWv2Ousdjbb2uLtliMHaIOX4gGrT1V+KMkt3abP/ydSWbzhIK+p5AQxXrDI6SIoXCH877C0X7quPQCb7BFtG5kOaEQuXQY/hGWEThoAIuxIIdz2mYarUCLES7/K9IzNKSV/GXZmbX7xCOHV0Fc4CDNc0eUYncarSisI4VX6BxPwZ2stG+Kg/GDcO1oWNpFczC/1EcxnKgMDwvEQIJujEa7p7K9cUgfWhdtm9WGtLqwRFM12lJnMOh6/Ko8aHnH/McZjjBAqjbUOK/LDVcB5Z5rzw+tmXIGpffdazOdmkPxAPZn59cc9oFh6HuUKLghB+S5bbNvvr97/mm/po+V+0XZdLcJILBNK0RHHB/zV1kvv [...]
            },
            "metadata_fingerprint": "vXoBPYNmrvk=",
            "name": "wordpress-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.187.59.189",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/global/networks/mon-reseau",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/regions/europe-west1/subnetworks/mon-sous-reseau",
                "subnetwork_project": "zinc-strategy-393412"
              }
            ],
            "project": "zinc-strategy-393412",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/zones/europe-west1-b/instances/wordpress-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.my_network",
            "google_compute_subnetwork.my_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/zinc-strategy-393412/global/networks/mon-reseau",
            "mtu": 0,
            "name": "mon-reseau",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "zinc-strategy-393412",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/global/networks/mon-reseau"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-26T12:01:25.131-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/zinc-strategy-393412/regions/europe-west1/subnetworks/mon-sous-reseau",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "mon-sous-reseau",
            "network": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/global/networks/mon-reseau",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "zinc-strategy-393412",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zinc-strategy-393412/regions/europe-west1/subnetworks/mon-sous-reseau",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.my_network"
          ]
        }
      ]
    }
  ]
}